fix qa issues from importing language selector

--- a/local-template/package/includes/fragment-pagebegin.html
+++ b/local-template/package/includes/fragment-pagebegin.html
@@ -9,7 +9,7 @@
     <meta name="author" content="http://hl7.org/fhir"/>
 
     <link href="{{site.data.info.assets}}fhir.css" rel="stylesheet"/>
-    <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet" type="text/css" />
+    <link href="{{site.data.info.assets}}assets/css/fa-all.css" rel="stylesheet" type="text/css" />
     <!-- Bootstrap core CSS -->
     <link href="{{site.data.info.assets}}assets/css/bootstrap-fhir.css" rel="stylesheet"/>
 
@@ -61,7 +61,7 @@
                 {% include menu.xml %}
               </div>  <!-- /.nav-collapse -->
 
-              <div class="sf_colsIn col-md-8  navbar-right-container" data-sf-element="Language Selector & Search" data-placeholder-label="Language Selector & Search" style="display: flex; justify-content: flex-end; align-items: center;">
+              <div class="sf_colsIn col-md-8  navbar-right-container" data-sf-element="LanguageSelectorSearch" data-placeholder-label="Language Selector and Search" style="display: flex; justify-content: flex-end; align-items: center;">
                 <!-- This div will be pushed to the right -->
                 <div class="language-selector" style="margin-left: auto; background-color: #00477d; color: white;">
                   <i class="fa fa-language fa-lg"></i>
